# mini_chat

./: README.md
GateServer/: PropertySheet.props  mini_chat.sln
GateServer/ChatServer1/: CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatServer1.vcxproj  ChatServer1.vcxproj.filters  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  Message.h  MysqlDAO.cpp  MysqlDAO.h  MysqlMgr.cpp  MysqlMgr.h  MysqlPool.cpp  PropertySheet.props  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusConPool.cpp  StatusGrpcClient.cpp  const.h  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
GateServer/GateServer/: CServer.cpp  CServer.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  IOServicePool.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDAO.cpp  MysqlDAO.h  RedisConPool.h  RedisMgr.cpp  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h
GateServer/GateServer/VarifyServer/: Server.js  config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js
GateServer/StatusServer/: IOServicePool.h  MysqlMgr.cpp  MysqlMgr.h  MysqlPool.h  PropertySheet.props  RedisConPool.cpp  RedisMgr.cpp  StatusConPool.cpp  StatusConPool.h  StatusServer.cpp  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h
mini_chat/: CMakeLists.txt  ChatUserWid.cpp  ChatUserWid.h  ChatUserWid.ui  adduseritem.h  adduseritem.ui  applyfrienddlg.cpp  applyfrienddlg.h  applyfrienddlg.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoneclabel.cpp  clickedoneclabel.h  config.ini  contactuseritem.cpp  contactuseritem.h  contactuseritem.ui  contactuserlist.cpp  contactuserlist.h  customizeedit.cpp  customizeedit.h  findsuccessdlg.cpp  findsuccessdlg.h  findsuccessdlg.ui  (+48 more)
mini_chat/style/: stylesheet.qss
